[project]
name = "multi-agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "streamlit>=1.0.0",
    "tavily-python>=0.3.0",
    "trafilatura>=2.1.0",
]
